--- a/src/app/alert-info/alert-info.component.css
+++ b/src/app/alert-info/alert-info.component.css
@@ -6,31 +6,29 @@
 
 /* Style for table header */
 .alert-info-table th {
-    background-color: #f2f2f2; /* Light gray background color */
-    border: 1px solid #ddd; /* Add border to table cells */
+    background-color: transparent; /* Light gray background color */
+    border-bottom: 1px solid #a1a1a1; /* Add border to table cells */
+    color:white;
     padding: 8px; /* Add padding */
     text-align: center; /* Align text to the left */
 }
 
 /* Style for table rows */
 .alert-info-table td {
-    border: 1px solid #ddd; /* Add border to table cells */
+    border-bottom: 1px solid #a1a1a1; /* Add border to table cells */
+    color: #a1a1a1;
     padding: 8px; /* Add padding */
     text-align: center;
 }
 
 /* Style for even table rows */
 .alert-info-table tbody tr:nth-child(even) {
-    background-color: #f2f2f2; /* Alternate row background color */
+    background-color: transparent; /* Alternate row background color */
 }
 
     
 /* Style for table rows on hover */
 .alert-info-table tbody tr:hover {
     background-color: #dddddd46; /* Change background color on mouse hover */
+    border-radius: 20px;
 }
-
-.alert-info-div {
-    width: 100%;
-    overflow-x: auto;
-  }
