--- a/src/app/event-info/event-info.component.html
+++ b/src/app/event-info/event-info.component.html
@@ -1,6 +1,9 @@
 <div fxLayout="column" fxLayoutGap="10px">
   <div fxLayout="row" fxLayoutAlign="start">
     <div fxFlex="100%" fxFlex.lt-md="100%" fxFlex.lt-lg="50%" class="event-info-div">
+      <div class="buttons">
+          <button class="favorite" (click)="toggleShow()"> {{ isShowFavorite? 'Show All Fields':'Show Favorite Fields' }}</button>
+      </div>
       <table datatable [dtOptions]="dtOptions" class="row-border hover event-info-table" id="eventInfoTable">
         <thead>
           <tr>
@@ -12,7 +15,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let event of eventsData; let i = index" (click)="openModal(event)">
+          <tr *ngFor="let event of eventsObject; let i = index" (click)="openModal(event)">
             <td>{{ i + 1 }}</td>
             <td>{{ event._fields.DeviceEventClassId }}</td>
             <td>{{ event._fields.DeviceProduct }}</td>
@@ -22,11 +25,11 @@
         </tbody>
         <tfoot>
           <tr>
-            <th><input type="text" placeholder="Search No" name="search-id"/></th>
-            <th><input type="text" placeholder="Search DeviceEventClassId" name="search-DeviceEventClassId"/></th>
-            <th><input type="text" placeholder="Search DeviceProduct" name="search-DeviceProduct"/></th>
-            <th><input type="text" placeholder="Search DeviceVendor" name="search-DeviceVendor"/></th>
-            <th><input type="text" placeholder="Search detectionTime" name="search-detectionTime"/></th>
+            <th><input type="text" class="datatable_footer_filter_input" placeholder="Search No" name="search-id"/></th>
+            <th><input type="text" class="datatable_footer_filter_input" placeholder="Search DeviceEventClassId" name="search-DeviceEventClassId"/></th>
+            <th><input type="text" class="datatable_footer_filter_input" placeholder="Search DeviceProduct" name="search-DeviceProduct"/></th>
+            <th><input type="text" class="datatable_footer_filter_input" placeholder="Search DeviceVendor" name="search-DeviceVendor"/></th>
+            <th><input type="text" class="datatable_footer_filter_input" placeholder="Search DetectionTime" name="search-DetectionTime"/></th>
           </tr>
         </tfoot>
       </table>
