--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -5,17 +5,42 @@
 }
 
 .vertical-navbar li {
-    background-color: #f8f9fa;
-    border-bottom: 1px solid #ddd;
+    background-color: transparent;
+    margin-top: 10px;
+    margin-block-end: 10px;
+    /* border: 6px solid; */
+    /* border-bottom: 1px solid #ddd; */
 }
 
 .vertical-navbar li a {
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     display: block;
     padding: 8px;
 }
 
 .vertical-navbar li a:hover {
-    background-color: #2e313357;
+    border-radius: 20px;
+    background-color: #43454665;
+}
+
+.vertical-navbar hr {
+    margin: 0;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    border-width: 0;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.08);
+    border-bottom-width: thin;
+    background-color: transparent;
+    background-image: linear-gradient(to right, rgba(52, 71, 103, 0), rgba(52, 71, 103, 0.5), rgba(52, 71, 103, 0)) !important;
+    height: 0.0625rem;
+    margin: 1rem 0;
+    border-bottom: none;
+    opacity: 0.25;
+    background-color: transparent;
+    background-image: linear-gradient(to right, rgba(0, 117, 255, 0), rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)) !important;
+
+    
 }
