--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,83 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    /* margin: 0;  */
+    font-family: 'Source Sans Pro', sans-serif;
+    color: rgb(255, 255, 255);
+    /* overflow: hidden; */
+    /* display: -webkit-box; */
+    /* display: -webkit-flex; */
+    /* display: -ms-flexbox; */
+    /* display: flex; */
+    /* -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column; */
+    background: linear-gradient(195.09deg, rgba(34, 44, 68, 0.94) 55%, rgba(33, 44, 68, 0.49) 100%);
+    /* background: linear-gradient(25deg,  rgba(6, 11, 40, 0.94) 00%,  rgba(6, 11, 40, 0.94) 50.71%); */
+    -webkit-backdrop-filter: blur(120px);
+    backdrop-filter: blur(120px);
+    /* position: relative; */
+    /* padding: 22px; */
+    /* word-wrap: break-word; */
+    /* -webkit-background-clip: border-box;
+    background-clip: border-box; */
+    /* border: 0 solid rgba(0, 0, 0, 0.125); */
+    /* border-radius: 1.5rem; */
+}
+
+
+.dataTables_length label select {
+    background: #89898924;
+    border-width: thin;
+    color: #bdbaba;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 0.5px solid #718096;
+    height: 40px;
+    width: 100px;
+    text-align: center;
+}
+
+
+.dataTables_length label select option{
+    background: #212C44;
+    border-width: thin;
+    color: white;
+    padding: 0.35rem 1.2rem;
+    text-align: center;
+    font-size: 0.9rem;
+    font-weight: 700;
+    border-radius: 0.75rem;
+    line-height: 5;
+    background-size: 150% !important;
+    background-position-x: 125% !important;
+}
+
+.dataTables_length label select li:hover,
+.dataTables_length label select input:checked ~ label {
+  background-color: #d31c1c;
+}
+
+.dataTables_length label select input:focus ~ label {
+  background-color: #110f0f;
+}
+
+.dataTables_filter label input {
+    background: #89898924;
+    border-width: thin;
+    color: #bdbaba;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 0.5px solid #718096;
+    height: 30px;
+    width: 100px;
+}
+
+.cdk-global-overlay-wrapper{
+    background: rgb(131 129 129 / 17%);
+}
+
+.mdc-dialog__container > div{
+    border-radius: 25px;
+}
